# snapbyob

./: .gitignore  LICENSE  README.md  structure.md  test.py
snapbyob/: __init__.py  pyproject.toml
snapbyob/lib/blocks/: glideTo.py  goTo.py  move.py  pointInDirection.py
snapbyob/lib/blocks/control/: aNewCloneOf.py  broadcast.py  broadcastAndWait.py  createACloneOf.py  forX.py  forever.py  ifElse.py  ifOnEdgeBounce.py  ifX.py  repeat.py  repeatUntil.py  report.py  stop.py  switchToScene.py  this.py  wait.py  waitUntil.py  when.py  whenFlagClicked.py  whenIAm.py  whenIRecieve.py  whenKeyPressed.py
snapbyob/lib/blocks/looks/: changeEffectBy.py  changeSizeBy.py  effect.py  goBackLayer.py  goToLayer.py  hide.py  sayFor.py  setSizeTo.py  skewCostume.py  stretchCostume.py  switchToCostume.py  think.py
snapbyob/lib/blocks/motions/: changeXBy.py  glideTo.py  goTo.py  move.py  pointInDirection.py  pointTowards.py  rotateClockwise.py  rotateCounterClockwise.py
snapbyob/lib/blocks/sensing/: askAndWait.py  colorIsTouching.py  keyPressed.py  mouseDown.py  touching.py  touchingColor.py
snapbyob/lib/methods/: actions.py  conditional.py  formFiles.py  id.py  insertBlock.py  pingtime.py
snapbyob/lib/typings/Background/: __init__.py
snapbyob/lib/typings/Block/: __init__.py
snapbyob/lib/typings/BlockHolder/: __init__.py
snapbyob/lib/typings/BlockInstance/: __init__.py
snapbyob/lib/typings/Children/: __init__.py
snapbyob/lib/typings/CloneContext/: __init__.py
snapbyob/lib/typings/Color3/: __init__.py
snapbyob/lib/typings/Context/: __init__.py
snapbyob/lib/typings/Costume/: __init__.py
snapbyob/lib/typings/CostumeContext/: __init__.py
snapbyob/lib/typings/DataHolder/: __init__.py
snapbyob/lib/typings/DataObject/: __init__.py
snapbyob/lib/typings/Effect/: __init__.py
snapbyob/lib/typings/Enum/: __init__.py
snapbyob/lib/typings/EnumBaby/: __init__.py
snapbyob/lib/typings/EnumItem/: __init__.py
snapbyob/lib/typings/Event/: __init__.py
snapbyob/lib/typings/Keycode/: __init__.py
snapbyob/lib/typings/Layer/: __init__.py
snapbyob/lib/typings/LineType/: __init__.py
snapbyob/lib/typings/Message/: __init__.py
snapbyob/lib/typings/MouseInteraction/: __init__.py
snapbyob/lib/typings/MyContext/: __init__.py
snapbyob/lib/typings/Point/: __init__.py
snapbyob/lib/typings/Project/: __init__.py
snapbyob/lib/typings/RelContext/: __init__.py
snapbyob/lib/typings/Scene/: __init__.py
snapbyob/lib/typings/Space2/: __init__.py
(+33 files in other folders)
